# videoray_description

./: CMakeLists.txt  README.md  package.xml
config/videoray_pro4/: inertial.yaml  thruster_manager.yaml  vel_pid_control.yaml
launch/: thruster_manager.launch  upload_videoray_pro4.launch  videoray_pro4_joy_velocity.launch  videoray_pro4_publisher.launch  videoray_pro4_thruster_manager.launch
meshes/: videoray_pro4.stl
urdf/: test.urdf  test.urdf.txt  videoray_pro4.urdf.xacro  videoray_pro4.xacro  videoray_pro4_sensors.xacro  videoray_pro4_thruster.xacro  videoray_pro4_thrusters.xacro
